--- a/gobarber/mobile/.eslintrc.json
+++ b/gobarber/mobile/.eslintrc.json
@@ -43,7 +43,8 @@
         "tsx": "never"
       }
     ],
-    "no-unused-expressions": "off"
+    "no-unused-expressions": "off",
+    "no-return-assign": "off"
   },
   "settings": {
     "import/resolver": {
