--- a/gobarber/mobile/package.json
+++ b/gobarber/mobile/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.5.1",
     "@unform/core": "^2.1.0",
     "@unform/mobile": "^2.1.0",
+    "axios": "^0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
@@ -23,7 +24,8 @@
     "react-native-safe-area-context": "^3.0.5",
     "react-native-screens": "^2.8.0",
     "react-native-vector-icons": "^6.6.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -34,6 +36,7 @@
     "@types/react-native-vector-icons": "^6.4.5",
     "@types/react-test-renderer": "16.9.2",
     "@types/styled-components": "^5.1.0",
+    "@types/yup": "^0.29.3",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
     "babel-jest": "^24.9.0",
