--- a/gobarber/mobile/.eslintrc.json
+++ b/gobarber/mobile/.eslintrc.json
@@ -22,6 +22,7 @@
   },
   "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
   "rules": {
+    "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
