--- a/gobarber/backend/.eslintrc.json
+++ b/gobarber/backend/.eslintrc.json
@@ -18,14 +18,22 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": [
-    "@typescript-eslint",
-    "prettier"
-  ],
+  "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
+    "no-underscore-dangle": "off",
     "prettier/prettier": "error",
-    "@typescript-eslint/camelcase": "off",
     "class-methods-use-this": "off",
+    "no-useless-constructor": "off",
+    "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "off",
+      "error",
+      { "argsIgnorePatters": "_" }
+    ],
+    "@typescript-eslint/interface-name-prefix": [
+      "error",
+      { "prefixWithI": "always" }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
