--- a/gobarber/backend/tsconfig.json
+++ b/gobarber/backend/tsconfig.json
@@ -15,6 +15,7 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "allowJs": true,
     "forceConsistentCasingInFileNames": true
   }
 }
