--- a/gobarber/backend/.env.example
+++ b/gobarber/backend/.env.example
@@ -1,3 +1,11 @@
+# secret for user token
 APP_SECRET=
+
+# url api
 APP_API_URL=http://localhost:3333
+
+# url web app
 APP_WEB_URL=http://localhost:3000
+
+# email service
+MAIL_DRIVER=
